--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <p><a href="https://www.who.int/health-topics/substance-abuse" target="_blank" rel="noopener noreferrer" class="help-link">Zasoby edukacyjne WHO</a></p>
                 </div>
                 <div class="help-card">
-                    <h3>🌐 UNODC - Narkozy i Przestępczość</h3>
+                    <h3>🌐 UNODC - Narkotyki i Przestępczość</h3>
                     <p><a href="https://www.unodc.org/unodc/en/prevention/index.html" target="_blank" rel="noopener noreferrer" class="help-link">Programy prewencyjne UNODC</a></p>
                 </div>
             </div>
